--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 
     <footer class="footer">
-      <p>Coded by Maryna Kidun</p>
+      <p><a href="https://github.com/marykidun/first-happy-project" target="_blank">Open-source code</a> ,coded by Maryna Kidun</p>
     </footer>
     <script src="function.js"></script>
   </body>
