--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <h1>WeatherLab</h1>
     <h2 span class="newCity">
       Barcelona</span></h2>
-      <span id="temperature">23°</span>
-      <span
-        id="link-Celsius">C</span
-      >
+      <span id="temperature">23</span>
+      <a href="#"><span
+        id="link-Celsius">C° |</span
+      ></a><a href="#"><span
+        id="link-Farhenheit">F°</span
+      ></a>
     </h2>
     <h3 class="description">☀Sunny</h3>
     <h3 id="nowDate"></h3>
