Updated html and js files with F/C converting
Added classes to links and added functions that convert temperature in F and C

--- a/index.html
+++ b/index.html
@@ -24,18 +24,25 @@
   </head>
   <body>
     <h1>WeatherLab</h1>
+     <div class="clearfix weather-Temperature">
     <h2 span class="newCity">
       Barcelona</span></h2>
       <span id="temperature">23</span>
       <a href="#"><span
-        id="link-Celsius">C° |</span
+        id="link-Celsius" class="active">C° |</span
       ></a><a href="#"><span
-        id="link-Farhenheit">F°</span
+        id="link-Farhenheit"> F°</span
       ></a>
     </h2>
-    <h3 class="description">☀Sunny</h3>
+   
+      <div>
+    <img src = "" alt="current weather" id="icon" class="float-left" />
+    <div class="float-left">
+    <h3 class="description">Sunny</h3>
     <h3 id="nowDate"></h3>
-    
+    </div>
+    </div>
+    </div>
     <form class="searchForm">
       <input
         class="engine"
