Worked with icon

--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
       ></a>
     </h2>
    
-      <div class="clearfix weather-temperature">
-    <img src ="" id="icon" class="float-left" />
+      <div class="row">
+            <div class="col-6">
+    <img src ="" alt="" class="icon">
     <div class="float-left">
     <h3 class="description">Sunny</h3>
     <h3>Humidity: <span class="humidity"></span>%</h3>
     <h3>Wind: <span class="wind"></span> m/s</h3>
-  
+  </div>
+  </div>
     
-    </div>
+    
     </div>
     </div>
     <form class="searchForm">
