--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <body>
     <h1>WeatherLab</h1>
      <div class="clearfix weather-temperature">
-    <h2 span class="newCity">
-      Barcelona</span></h2>
+    <h2 span class="newCity"></span></h2>
       <h3 id="nowDate"></h3>
       <span id="temperature">23</span>
       <a href="#"><span
@@ -40,7 +39,7 @@
             <div class="col-6">
     <img src ="" alt="" class="icon">
     <div class="float-left">
-    <h3 class="description">Sunny</h3>
+    <h3 class="description"></h3>
     <h3>Humidity: <span class="humidity"></span>%</h3>
     <h3>Wind: <span class="wind"></span> m/s</h3>
   </div>
